@@ -35,6 +35,17 @@
 # endif
 #endif
 
+#if defined(TIME_WITH_SYS_TIME)
+# include <sys/time.h>
+# include <time.h>
+#else
+# if defined(HAVE_SYS_TIME_H)
+#  include <sys/time.h>
+# elif defined(HAVE_TIME_H)
+#  include <time.h>
+# endif
+#endif
+
 #include <string.h>             /* for memset() */
 #include <stdio.h>              /* fopen/fclose for db->verify */
 
