@@ -1,6 +1,7 @@
 2004-08-04  Sam Steingold  <sds@gnu.org>
 
-	* modules/berkeley-db/bdb.c (time_stamp): new function
+	* modules/berkeley-db/bdb.c: include <time.h> and/or <sys/time.h>
+	(time_stamp): new function
 	(CLOSE_ERRFILE): call time_stamp() before fclose()
 	(my_fopen): call time_stamp() after fopen()
 	* modules/berkeley-db/configure.in: check for gettimeofday(),
